--- a/senguo.cc/admin/static/css/official_home.css
+++ b/senguo.cc/admin/static/css/official_home.css
@@ -1,8 +1,4 @@
 body{padding-top: 0;}
-.slide_box{width:100%;overflow: hidden;position:relative;height:500px;overflow:hidden;text-align: center;}
-.slide_box .slide-ul{position: absolute;height: 500px;overflow: hidden;top: 0;}
-.slide-ul .item{width:100%;position:relative;}
-.slide_box .bg{width:1200px;height: 500px;}
 .slide-ul .item .item_box{width:1200px;margin:0 auto;position:relative;margin-top:5px;}
 .slide-ul .item .img{left:0;opacity:0;}
 .slide-ul .item .word{font-size:24px;top:160px;position:absolute;right:-9999px;}
@@ -13,6 +9,10 @@ body{padding-top: 0;}
 .slide-ul .item .img2{width:1100px;}
 .slide-ul .item .word2{margin-right:20px;top:180px;}
 .slide-ul .item .word3{margin-right:50px;top:110px;}
+.slide_box{width:100%;overflow: hidden;position:relative;height:500px;overflow:hidden;text-align: center;}
+.slide_box .slide-ul{position: absolute;height: 500px;overflow: hidden;top: 0;}
+.slide-ul .item{width:100%;position:relative;}
+.slide_box .bg{width:1200px;height: 500px;}
 .slide_box{position: relative;}
 .slide_box .num{position:absolute;left:50%;bottom:5px;z-index:999;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);}
 .slide_box .num li{width:15px;height:15px;border-radius:50%;border:1px solid #fff;}
@@ -23,13 +23,13 @@ body{padding-top: 0;}
 .announcement .item{width:100%;height:50px;line-height:50px;background:url('/static/official_img/horn.png') no-repeat left 10px;background-size:34px;padding-left:34px;}
 .announcement .item .con{display:inline-block;width:160px;overflow:hidden;}
 
-.intro_list{margin-top:10px;padding-bottom: 60px;}
+.intro_list{margin-top:58px;padding-bottom: 60px;}
 .intro_list li{width:33.333333%}
-.intro_list li img{width:460px;height: 210px;}
-.intro_list li  .intro{width:180px;margin:0 auto;}
-.intro_list li  .intro p{margin-bottom:10px;}
+.intro_list li img{width:500px;height: 234px;}
+.intro_list li  .intro{width:200px;margin:0 auto;}
+.intro_list li  .intro p{margin-bottom:13px;line-height: 20px;}
 .mt-3{margin-top: -3px!important;}
-.intro-top{margin-bottom: 30px;text-align: center;font-size: 22px;}
+.intro-top{margin-bottom: 30px;text-align: center;font-size: 36px;}
 .bg-bg{position: absolute;width: 1000px;height: 500px;top: 0;left: 50%;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);-ms-transform:translate(-50%,0);background-color: rgba(0,0,0,.5);z-index:100;}
 .bg-text{width: 1000px;position: absolute;top: 150px;left: 50%;color: #fff;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);-ms-transform:translate(-50%,0);z-index:200;}
 .bg-text>h1{font-weight:normal;font-size: 50px;text-align: center;}
