madmin picture library goods

--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -83,7 +83,7 @@
                 <li class="active">图片库</li>
                 <li>系统默认图片</li>
             </ul>
-            <div class="p15">
+            <div class="p15" id="upload-area">
                 <span class="pull-left">点击图片即选中</span>
                 <button id="upload-picture" class="btn bg-green text-white pull-right">本地上传</button>
             </div>
