--- a/senguo.cc/admin/templates/m-admin/goods-add.html
+++ b/senguo.cc/admin/templates/m-admin/goods-add.html
@@ -264,6 +264,25 @@
         <div class="load-txt">加载中...</div>
     </div>
 </div>
+<div class="pop-picture-library hide">
+    <div class="wrap-sty-box">
+         <ul class="picture-title wrap-sty">
+            <li class="active">图片库</li>
+            <li>系统默认图片</li>
+        </ul>
+        <div class="picture-title2" id="upload-area">
+            <span class="fl">点击图片即选中</span>
+            <button id="upload-picture" class="btn fr">本地上传</button>
+        </div>
+         <div class="picture-library">
+           <ul class="group picture-list">
+            </ul>
+        </div>
+         <div class="wrap-sty">
+            <a href="javascript:;" class="cancel-btn">取消</a>
+        </div>
+    </div>
+</div>
 {% end %}
 {% block bottom %}
 <script src="/static/js/jquery.min.js"></script>
