--- a/senguo.cc/admin/static/m-admin/css/main.css
+++ b/senguo.cc/admin/static/m-admin/css/main.css
@@ -371,6 +371,26 @@
 .bm60{bottom:60px}
 .wrap-operates span{font-size: 14px;color: #48B6A4;width: 38px;height: 20px;display: inline-block;}
 .code2group{margin-top: 36px;}
+.pop-win{position: fixed;width: 100%;height: 100%;background-color: rgba(0,0,0,.4);z-index: 1055;top: 0;left:0;}
+.pop-picture-library{width: 100%;height: 100%;position: fixed;background-color: rgba(0,0,0,.4);top: 0;left: 0;z-index:999;}
+.picture-library{padding:10px 15px;margin:10px 0;clear:both;height:200px;overflow-y:scroll;}
+.picture-title{border-bottom:1px solid #ddd;height:20px;}
+.picture-title li{width:100px;text-align:center;float:left;color:#333;}
+.picture-title li.active{color:#48b6a4;}
+.picture-list{clear:both;width:105%;}
+.picture-list li{float:left;margin:0 10px 10px 0;position:relative;}
+.picture-list li:hover{cursor:pointer;}
+.picture-list li:hover .img-selected{display:block;}
+.picture-list .img-selected{position: absolute;left: 0;top: 0;width:60px;height:60px;background-color: rgba(0,0,0,.5);color: #fff;text-align: center;line-height:80px;font-size: 12px;display: none;z-index:100;}
+.picture-list img{width:60px;height:60px;}
+#upload-picture{border-radius:0px;padding:2px 10px;}
+.wrap-sty-box{position: absolute;background: #fff;border: 1px solid #ddd;width:300px;left: 50%;top: 50%;-webkit-transform:translate(-50%,-50%);z-index:1050;}
+.wrap-sty{background-color: #fbfbfb;border-top:1px solid #ddd;padding: 10px 0;text-align: center;clear:both;}
+.wrap-sty>a{display:inline-block;width: 90px;text-align:center;color:#333;font-size:14px;height:28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
+.del-pic-img{position: absolute;z-index:999;right: -8px;top:-8px;width: 20px;height: 20px;background-color: rgba(0,0,0,.6);font-size: 14px;color: #fff;line-height: 18px;text-align: center;border-radius: 50%;}
+.del-pic-img:hover,.del-pic-img:visited,.del-pic-img:link{color: #fff;}
+.picture-title2{padding:10px 15px;clear:both;line-height:20px;}
+.picture-title2 .btn{background-color:#48b6a4;color:#fff;}
 /*添加商品&编辑商品*/
 .w50{width: 50% !important;-webkit-box-sizing: border-box;}
 .add-title{text-indent: 10px;line-height: 24px;}
