--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -88,7 +88,7 @@
                 <button id="upload-picture" class="btn bg-green text-white pull-right">本地上传</button>
             </div>
              <div class="picture-library">
-               <ul class="group picture-list">
+               <ul class="group picture-list upload-pic-list">
                     <li class="img-bo">
                         <div class="img-selected">已选</div>
                         <img src="" alt="商品图片"/>
