--- a/senguo.cc/admin/templates/m-admin/goods-edit.html
+++ b/senguo.cc/admin/templates/m-admin/goods-edit.html
@@ -19,7 +19,7 @@
             <li>
                 <div class="add-row">
                     <span class="add-left">商品类目</span>
-                    <span class="add-right borderm choose_classify" data-id="{{data['fruit_type_id']}}">{{data['fruit_type_name']}}</span>
+                    <span class="add-right borderm choose_classify" data-id="{{data['fruit_type_id']}}" data-code="{{data['code']}}">{{data['fruit_type_name']}}</span>
                 </div>
             </li>
             <li>
@@ -307,15 +307,18 @@
 <div class="pop-picture-library hide">
     <div class="wrap-sty-box">
          <ul class="picture-title wrap-sty">
-            <li class="active">图片库</li>
-            <li>系统默认图片</li>
+            <li class="active show-upload-list">图片库</li>
+            <li class="show-default-list">系统默认图片</li>
         </ul>
         <div class="picture-title2" id="upload-area">
-            <span class="fl">点击图片即选中</span>
+            <span class="fl">点击图片即选中(<span class="pic-classify">所有</span>)</span>
             <button id="upload-picture" class="btn fr">本地上传</button>
         </div>
          <div class="picture-library">
-           <ul class="group picture-list">
+            <ul class="group picture-list upload-pic-list">
+            </ul>
+            <ul class="group picture-list default-pic-list hide">
+                <li class="" id="demo-img"><img src="" alt="商品图片"/></li>
             </ul>
         </div>
          <div class="wrap-sty">
