--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -351,14 +351,14 @@
                     <a href="javascript:;" class="add-item-list" id="add-img-btn">+</a>
                 </li>
             </ul>
-            <p class="group mt10"><span class="c333">森果图片库 : </span><span class="red-txt goods-classify-txt">苹果</span></p>
+        <!--     <p class="group mt10"><span class="c333">森果图片库 : </span><span class="red-txt goods-classify-txt">苹果</span></p>
             <ul class="item-img-lst group sg-img-list">
                 <li class="img-bo" id="demo-img">
                     <div class="img-selected">已选</div>
                     <img src="" alt="商品图片"/>
                     <a class="show-bigimg" data-src="" href="javascript:;">预览大图</a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <div class="wrap-pop-btn">
             <a href="javascript:;" class="ok-btn" id="upload-img">确认上传</a>
@@ -369,20 +369,23 @@
 <div class="pop-win pop-picture-library">
     <div class="wrap-sty-box">
          <ul class="picture-title wrap-sty">
-            <li class="active">图片库</li>
-            <li>系统默认图片</li>
+            <li class="active show-upload-list">图片库</li>
+            <li class="show-default-list">系统默认图片</li>
         </ul>
         <div class="p15" id="upload-area">
-            <span class="pull-left">点击图片即选中</span>
+            <span class="pull-left">点击图片即选中(<span class="pic-classify">所有</span>)</span>
             <button id="upload-picture" class="btn bg-green text-white pull-right">本地上传</button>
         </div>
          <div class="picture-library">
-           <ul class="group picture-list">
+           <ul class="group picture-list upload-pic-list">
                 <li class="img-bo">
                     <a href="javascript:;" class="del-pic-img">x</a>
                     <div class="img-selected">已选</div>
                     <img src="" alt="商品图片"/>
                 </li>
+            </ul>
+            <ul class="group picture-list default-pic-list hide">
+                <li class="" id="demo-img"><img src="" alt="商品图片"/></li>
             </ul>
             <div class="picture-pagination list-pagination group pull-right mt0">
                 <ul>
