--- a/senguo.cc/admin/static/css/official_home.css
+++ b/senguo.cc/admin/static/css/official_home.css
@@ -9,14 +9,6 @@ body{padding-top: 0;}
 .slide-ul .item .img2{width:1100px;}
 .slide-ul .item .word2{margin-right:20px;top:180px;}
 .slide-ul .item .word3{margin-right:50px;top:110px;}
-.slide_box{width:100%;overflow: hidden;position:relative;height:500px;overflow:hidden;text-align: center;}
-.slide_box .slide-ul{position: absolute;height: 500px;overflow: hidden;top: 0;}
-.slide-ul .item{width:100%;position:relative;}
-.slide_box .bg{width:1200px;height: 500px;}
-.slide_box{position: relative;}
-.slide_box .num{position:absolute;left:50%;bottom:5px;z-index:999;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);}
-.slide_box .num li{width:15px;height:15px;border-radius:50%;border:1px solid #fff;}
-.slide_box .num .on{background:#fff;}
 .mt10{margin-top: 10px !important;}
 .announcement{width:100%;background:url('/static/official_img/line.png') no-repeat center bottom;}
 .announcement .box{width:300px;margin:0 auto;}
@@ -25,22 +17,32 @@ body{padding-top: 0;}
 
 .intro_list{margin-top:58px;padding-bottom: 60px;}
 .intro_list li{width:33.333333%}
-.intro_list li img{width:500px;height: 234px;}
+.intro_list li img{width:500px;height: 300px;}
 .intro_list li  .intro{width:200px;margin:0 auto;}
 .intro_list li  .intro p{margin-bottom:13px;line-height: 20px;}
 .mt-3{margin-top: -3px!important;}
 .intro-top{margin-bottom: 30px;text-align: center;font-size: 36px;}
 .bg-bg{position: absolute;width: 1000px;height: 500px;top: 0;left: 50%;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);-ms-transform:translate(-50%,0);background-color: rgba(0,0,0,.5);z-index:100;}
-.bg-text{width: 1000px;position: absolute;top: 150px;left: 50%;color: #fff;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);-ms-transform:translate(-50%,0);z-index:200;}
+.bg-text {position: absolute;top: 0;left: 50%;z-index: 200;color: #fff;margin-top: 300px;margin-left: -70px}
 .bg-text>h1{font-weight:normal;font-size: 50px;text-align: center;}
 .bg-text>p{font-size: 20px;line-height: 28px;text-align: center;}
-.bg-text>a{color: #fff;display: block;width: 140px;font-size: 18px;font-weight: bold;text-align: center;height: 40px;line-height: 40px;background-color: #58d0a6;border-radius: 2px;margin: 170px auto;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out;}
-.bg-text>a:hover{text-decoration: none;background-color: #fff;color: #333;}
-.swiper-container{width: 1000px;height: 500px;margin: 0 auto;}
-.swiper-slide{position: relative;}
+.bg-text>a{color: #fff;display: block;width: 140px;font-size: 18px;font-weight: bold;text-align: center;height: 40px;line-height: 40px;background-color: #58d0a6;border-radius: 3px;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out;}
+.bg-text>a:hover{text-decoration: none;background-color: rgba(255,255,255,0);border:2px solid #58d0a6;border-radius: 3px;color: #58d0a6;}
 .pagination{position: absolute;z-index:10;left: 50%;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);bottom: 10px;white-space: nowrap;line-height: 1;}
 .swiper-pagination-switch{width:14px;height: 14px;border-radius:50%;-webkit-box-sizing:border-box;box-sizing:border-box;display: inline-block;margin:0 5px;-webkit-transition:all .2s ease;transition:all .2s ease;background-color: #fff;cursor: pointer;}
 .swiper-active-switch{background-color: #6CCA86;}
 .turn-page{width: 1000px;position: relative;top:-300px;z-index: 2;margin: 0 auto;}
 .turn-page .left{float: left;cursor: pointer;margin-left: -80px;}
 .turn-page .right{float: right;cursor: pointer;margin-right: -80px;}
+.slide_box{width: 100%;height: 500px;overflow: hidden;position: relative;}
+.swiper-container {width: 1000px;height: 500px;margin: 0 auto;position: relative;overflow: visible;}
+.wrap-arrows .prev {right: 100%;}
+.wrap-arrows .next {left: 100%;}
+.wrap-arrows>a {position: absolute;display: block;width: 1000px;height: 500px;background: #fff;top: 0px;z-index: 99;opacity: 0.6;filter: alpha(opacity=60);}
+.swiper-wrapper {width: 3000px;height: 500px;left: -1000px;position: relative;}
+.swiper-wrapper>li {float: left;width: 1000px;height: 500px;}
+.slide_box .bg {width: 1000px;height: 500px;}
+.wrap-arrows>a:hover .icon-arrows {display: block;}
+.wrap-arrows .arrows-left {right: 20px;background: url('/static/official_img/prev.png') no-repeat;}
+.wrap-arrows .arrows-right {left: 20px;background: url('/static/official_img/next.png') no-repeat;}
+.wrap-arrows>a>i {display: none;position: absolute;width: 42px;height: 135px;top: 167px;}
