--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -67,7 +67,7 @@
 		</div>
 	{%block header-extends%}{%end%}
 	</header>
-	<main class="container clearfix mt20">
+	<main class="container clearfix mt76">
 		{% block content%} {% end%}
 	</main>
     <div class="scrollUpf">
@@ -91,11 +91,11 @@
             <div class="iokf"></div>
         </a>
     </div>
-	<footer class="footer">
+	<!-- <footer class="footer">
 		{% block bottom %}
 		<p class="text-center text-grey">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
 		{% end %}
-	</footer>
+	</footer> -->
     <script>
         var _hmt = _hmt || [];
         (function() {
