--- a/senguo.cc/admin/templates/official/home.html
+++ b/senguo.cc/admin/templates/official/home.html
@@ -6,23 +6,28 @@
 {% block content%}
 <div class="slide_box" id="slideBox">
     <div class="swiper-container" id="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide item">
-                <img src="{{static_url('official_img/adone.jpg')}}" class="bg"/>
-            </div>
-            <div class="swiper-slide item">
-                <img src="{{static_url('official_img/adtwo.jpg')}}" class="bg"/>
-            </div>
-            <div class="swiper-slide item">
-                <img src="{{static_url('official_img/adthree.jpg')}}" class="bg"/> 
-            </div>
+        <div class="wrap-arrows">
+            <a href="javascript:;" class="prev slide-btn" title="上一页" id="prev">
+                <i class="icon-arrows arrows-left"></i>
+            </a>
+            <a href="javascript:;" class="next slide-btn" title="下一页" id="next">
+                <i class="icon-arrows arrows-right"></i>
+            </a>
         </div>
-        <a class="apply-in" href="{{reverse_url('ApplyHome')}}">申请接入</a>
+        <ul class="swiper-wrapper" id="swiper-wrapper">
+            <li class="swiper-slide item" data-index="2" style="position: absolute; top: 0px; left: 2000px;">
+                <img src="{{static_url('official_img/adone.jpg')}}" class="bg" title="再小的水果店，也要有自己的O2O平台">
+            </li>
+            <li class="swiper-slide item" data-index="0" style="position: absolute; top: 0px; left: 0px;">
+                <img src="{{static_url('official_img/adtwo.jpg')}}" class="bg" title="全平台水果商城">
+            </li>
+                <li class="swiper-slide item" data-index="1" style="position: absolute; top: 0px; left: 1000px;">
+            <img src="{{static_url('official_img/adthree.jpg')}}" class="bg" title="最好用的后台管理系统">
+            </li>
+        </ul>
     </div>
-    <div class="pagination"></div>
-    <div class="turn-page">
-        <img class="left" src="{{static_url('official_img/left_btn.png')}}" title="上一页">
-        <img class="right" src="{{static_url('official_img/right_btn.png')}}" title="下一页"> 
+    <div class="bg-text">
+        <a href="/apply">申请接入</a>
     </div>
 </div>
 <div class="center-block">
@@ -44,7 +49,7 @@
                     {% end %}
                 </ul>
             </li>
-            <li>
+            <li class="last-news">
                 <ul class="text-list">
                     <div class="title">运营干货<a class="pull-right font16" title="运营干货" href="{{reverse_url('BbsMain')}}?action=dry"  target="_blank">更多</a></div>
                    {% for a in article_list["dry"]%}
@@ -59,25 +64,33 @@
             <p class="box-title">森果适用的水果经营模式</p>
             <ul class="type-list group">
                 <li>
-                    <div class="type-img"><img src="/static/official_img/o2o.png" alt="水果O2O"/></div>
+                    <div class="type-img">
+                        <img src="{{static_url('official_img/o2o.png')}}" alt="水果O2O"/>
+                    </div>
                     <p class="mt20 first-title">水果O2O</p>
                     <p class="second-title">森果有多种风格的商城模板，完善便捷的店铺管理功能，方便您进行水果O2O的一切探索
                     </p>
                 </li>
                 <li>
-                    <div class="type-img"><img src="/static/official_img/single.png" alt="水果连锁经营"/></div>
+                    <div class="type-img">
+                        <img src="{{static_url('official_img/single.png')}}" alt="水果连锁经营"/>
+                    </div>
                     <p class="mt20 first-title">水果单店铺经营</p>
                     <p class="second-title">省去店铺收银系统、CRM系统、商超系统等昂贵的成本，手机+电子秤+扫描枪，轻松开店
                     </p>
                 </li>
                 <li>
-                    <div class="type-img"><img src="/static/official_img/chain.png" alt="水果单店铺经营"/></div>
+                    <div class="type-img">
+                        <img src="{{static_url('official_img/chain.png')}}" alt="水果单店铺经营"/>
+                    </div>
                     <p class="mt20 first-title">水果连锁经营</p>
                     <p class="second-title">使用森果对您连锁经营的多个店铺进行管理，对每个店铺的采购和销售情况、员工和工资记录等，了如指掌
                     </p>
                 </li>
                 <li>
-                    <div class="type-img"><img src="/static/official_img/aggregation.png" alt="水果商家聚合"/></div>
+                    <div class="type-img">
+                        <img src="{{static_url('official_img/aggregation.png')}}" alt="水果商家聚合"/>
+                    </div>
                     <p class="mt20 first-title">水果商家聚合</p>
                     <p class="second-title">您可以将附近的水果店整合起来，打造水果商家聚合平台
                     </p>
@@ -120,7 +133,7 @@
                 <span class="right-triangle"></span>
                 <ul class="group">
                     <li class="item pull-left">
-                        <img src="{{static_url('official_img/adone.jpg')}}"/>
+                        <img src="{{static_url('official_img/o2o_one.png')}}"/>
                     </li>
                     <li class="item pull-right">
                         <div class="intro mt10">
@@ -135,7 +148,7 @@
                 <span class="left-triangle"></span>
                 <ul class="group">
                     <li class="item pull-right">
-                        <img src="{{static_url('official_img/adone.jpg')}}"/>
+                        <img src="{{static_url('official_img/o2o_two.png')}}"/>
                     </li>
                     <li class="item pull-left o2o-left-bg">
                         <div class="intro mt10">
@@ -150,7 +163,7 @@
                 <span class="right-triangle"></span>
                 <ul class="group">
                     <li class="item pull-left">
-                        <img src="{{static_url('official_img/adone.jpg')}}"/>
+                        <img src="{{static_url('official_img/o2o_three.png')}}"/>
                     </li>
                     <li class="item pull-right">
                         <div class="intro mt10">
@@ -199,7 +212,7 @@
                     <p class="qus">森果系统只能在微信上使用吗？</p>
                     <p class="ans font16">森果提供了微信、qq、支付宝、手机号等多种登录方式。您可以在微信、qq、支付宝、微博等多个渠道进行店铺的推广与经营。</p>
                 </li>
-                <li>
+                <li class="aq-right">
                     <p class="qus">接入需要什么条件？</p>
                     <p class="ans font16">几乎是不需要什么条件的。不过最好您进来是卖水果的，为水果行业提供免费的互联网工具，提高行业运转效率，这是我们的初衷。</p>
                 </li>
@@ -211,11 +224,18 @@
                     <p class="qus">你们提供货源吗？</p>
                     <p class="ans font16">森果是一个免费的水果第三方平台，主要提供技术支持，目前不提供货源。不过我们会为您提供采购信息支持。</p>
                 </li>
-                <li>
+                <li class="aq-right">
                     <p class="qus">店铺认证有什么作用？</p>
                     <p class="ans font16">为保障店铺和消费者的权益，森果开设的店铺需要进行店铺认证。认证完全免费，且流程简单。店铺认证后才能使用支付等高级功能。</p>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div class="footer-bg-img">
+        <img src="{{static_url('official_img/footer_img.png')}}">
+        <div class="apply-bottom">
+            <span>森果之旅从这里开始...</span>
+            <a href="/apply">申请接入</a>
         </div>
     </div>
 
