--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -16,7 +16,7 @@
 .goods-list-item .charge-style{clear:both;}
 .goods-list-item .charge-style span,a{display:inline-block;}
 .goods-list-item .charge-first{width:100%;float:left;line-height:36px;padding-right:25px;}
-.goods-list-item .charge-list{padding-right:15px;overflow:hidden;}
+.goods-list-item .charge-list{padding-right:0px;overflow:hidden;}
 .goods-list-item .charge-list li{height:36px;line-height:36px;}
 .goods-list-item .number-change{position:relative;width:90px;z-index:10;}
 .goods-list-item .minus-plus{display:inline-block;float:left;width:32px;height:32px;border:none;background:url('../svg/icon_list-2.png') no-repeat;background-size:140px 180px;position:absolute;z-index:10;}
@@ -127,11 +127,12 @@
 .status-discount{background-image: url('/static/images/status_discount.png');}
 .seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
 .seckill-btn-yes{background-color: #ddd !important;}
-.price-bo{color: #59D5AA;margin-right: 4px;cursor: pointer;}
-.price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;margin-left: 4px;vertical-align: 1px;transform: scale(0.9);-webkit-transform: scale(0.9);}
+.price-bo{color: #59D5AA;cursor: pointer;}
+.price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 2px;font-size:12px;border-radius: 12px;border: 1px solid #ff9800;height: 18px;line-height: 16px;vertical-align: 1px;transform: scale(0.9);-webkit-transform: scale(0.9);}
 .price-dif{-webkit-transform:scale(0.9);}
 .wrap-seckill-price{position: absolute;top: 4px;right: -20px;}
 .wrap-seckill-price-box{position: absolute;top: 67px;right: 10px;}
+.src-txt{display: inline-block;color: #999;font-size: 12px;text-decoration: line-through;transform: scale(0.9);-webkit-transform: scale(0.9);}
 /*swiper*/
 .img-list{width: 100%;height: 0;padding-bottom: 40%;position: relative;background-color: #fff;}
 .swiper-container{width: 100%;height: 0;padding-bottom: 40%;overflow: hidden;position: relative;}
